fix: card slider behavior on mobile

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -16,6 +16,7 @@
 
     --common-border: 2px solid var(--color-primary);
     --default-transition: 0.5s;
+    --card-width: 270px;
 }
 
 
@@ -242,7 +243,7 @@ header {
     gap: 29px;
     background-color: var(--color-light-s);
     border-radius: 9px;
-    width: 270px;
+    width: var(--card-width);
     margin-right: 88px;
     padding-bottom: 30px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);    
